# routes/auth.js
@@ -6,4 +6,6 @@ router.post("/login", controller.postLogin);
 
 router.post("/register", controller.postRegister);
 
+router.post('/refresh-token', controller.postRefreshToken);
+
 module.exports = router;
